2000-07-01  Jim Meyering  <meyering@lucent.com>

	* ls-mntd-fs.m4: Remove a `FIXME' comment and fix the associated
	problem.

2000-06-17  Bruno Haible  <haible@clisp.cons.org>

	* ls-mntd-fs.m4 (jm_LIST_MOUNTED_FILESYSTEMS): Rename BeOS specific
	macro from MOUNTED_NEXT_DEV to MOUNTED_FS_STAT_DEV.

2000-07-01  Jim Meyering  <meyering@lucent.com>

	* uptime.m4: Put double quotes around use of $cross_compiling.

2000-06-28  Jim Meyering  <meyering@lucent.com>

	* mbstate_t.m4: Use stdlib.h, not stdio.h.  The latter is not included
	by quotearg.c, for which we perform this test.  From Bruno Haible.

2000-06-17  Bruno Haible  <haible@clisp.cons.org>

	* check-decl.m4 (_jm_DECL_HEADERS): Check for utmp.h as well.
	* prereq.m4 (jm_PREREQ_READUTMP): Likewise. If either <utmp.h> or
	<utmpx.h> exists, put readutmp.o into LIBOBJS.

2000-06-25  Jim Meyering  <meyering@lucent.com>

	* mbstate_t.m4: Include stdio.h before wchar.h to work around
	Linux header bug when _XOPEN_SOURCE is defined to 500.

2000-06-24  Jim Meyering  <meyering@lucent.com>

	* strerror_r.m4: Revive this file -- to try out an experimental
	version of AC_FUNC_STRERROR_R that may work even on BeOS, a system
	for which strerror does return char*, but which lacks a conveniently
	accessible declaration of the function.  If the compile-test says
	strerror_r doesn't work, then resort to a `run'-test that works on
	BeOS and segfaults on DEC Unix.

2000-06-19  Paul Eggert  <eggert@twinsun.com>

	* mbstate_t.m4: New file, defining AC_MBSTATE_T_OBJECT.
	* prereq.m4 (jm_PREREQ_QUOTEARG): Use it.  Add check for iswprint.

2000-06-23  Jim Meyering  <meyering@lucent.com>

	* afs.m4: Add missing AC_MSG_RESULT.
	Reported by Bruno Haible.

	* fsusage.m4: s/AC_MSG_CHECKING/AC_CHECKING/.
	Suggestion from Bruno Haible.

2000-06-21  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4 (AC_REPLACE_FUNCS): Add getpass.

2000-06-18  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4 (AC_REPLACE_FUNCS): Remove mkdir.
