@@ -1,4 +1,4 @@
-#serial 1
+#serial 2
 
 dnl Written by Jim Meyering
 
@@ -6,7 +6,6 @@ AC_DEFUN(jm_FUNC_GROUP_MEMBER,
   [
     dnl Do this replacement check manually because I want the hyphen
     dnl (not the underscore) in the filename.
-    AC_CHECK_FUNC(group_member, , [LIBOBJS="$LIBOBJS group-member.$ac_objext"])
-    AC_SUBST(LIBOBJS)
+    AC_CHECK_FUNC(group_member, , [AC_LIBOBJ([group-member])])
   ]
 )
